# subjective-evaluation-data-prepare

./: pyproject.toml  test.py  test_2.py  test_3.py  test_4.py
